@@ -33,13 +33,19 @@ int gl_sockets_cleanup (void);
    Winsock wrappers but needs to pass on the socket handle to some
    other library that only accepts sockets. */
 #if WINDOWS_SOCKETS
+
+#include <sys/socket.h>
+
 static inline SOCKET
 gl_fd_to_handle (int fd)
 {
   return _get_osfhandle (fd);
 }
-#else
-#define gl_fd_to_handle(x) (x)
-#endif
 
-#endif
+#else
+
+#define gl_fd_to_handle(x) (x)
+
+#endif /* WINDOWS_SOCKETS */
+
+#endif /* SOCKETS_H */
